fix inline list spacing

--- a/src/scss/partials/_team-list.scss
+++ b/src/scss/partials/_team-list.scss
@@ -28,8 +28,8 @@
   }
 
   .member-list-inline & {
-    display: inline-flex;
-    width: auto;
+    display: inline;
+    line-height: 1.8;
   }
 }
 
@@ -45,6 +45,7 @@
     @include margin(0);
     @include padding(0);
     border: 0;
+    display: inline;
   }
 }
 
